tests/baselines/reference/parserComputedPropertyName35.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName35.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName35.ts (1 errors) ====
    var x = {
        [0, 1]: { }
        ~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }